Downgraded to java 8
Took 22 minutes